# rust-pg

./: .gitignore  Cargo.toml  README.md
assets/: adt.vert  gui.vert
assets/fonts/: fonts.yaml
assets/shaders/: adt.vert
renderer/: Cargo.toml  README.md
renderer/src/: application.rs  command_pool.rs  context.rs  framebuffer.rs  graph.rs  gui.rs  image.rs  instance.rs  lib.rs  logical_device.rs  macros.rs  orchestration.rs  physical_device.rs  pipeline.rs  queue.rs  render_pass.rs  renderer.rs  semaphore_pool.rs  surface.rs  swapchain.rs  traits.rs  utils.rs  vk.rs  window.rs
renderer/src/graph/: attachment.rs  buffer.rs  constraint.rs  graph.rs  manager.rs  pass.rs  resource.rs  scheduler.rs  texture.rs  virtual_resource.rs
renderer/src/gui/: application.rs  context.rs  context_old.rs  event.rs  integration.rs  renderer.rs  run.rs
renderer/src/orchestration/: orchestrator.rs  render.rs  rendering.rs  traits.rs
renderer/src/traits/: handle.rs  queue.rs
renderer/src/utils/: macros.rs  manager.rs  topological_sort.rs
renderer/src/vk/: application.rs  buffer.rs  command_buffer.rs  command_pool.rs  context.rs  descriptor.rs  frame_data.rs  framebuffer.rs  helpers.rs  image.rs  logical_device.rs  physical_device.rs  pipeline.rs  pool.rs  queue.rs  render_pass.rs  renderer.rs  sampler.rs  semaphore_pool.rs  surface.rs  swapchain.rs  window.rs
renderer/src/vk/descriptor/: layout.rs  set.rs
renderer/src/vk/pipeline/: layout.rs  pool.rs  shader.rs
renderer/src_old/: buffer.rs  lib.rs  queue.rs  renderer.rs  shared_context.rs
scratch/src/: lib.rs  smart_pointers.rs
src/: application.rs  main.rs  vulkan.rs
src/application/: debugging_state.rs
src/vulkan/: command_pool.rs  instance.rs  logical_device.rs  physical_device.rs  queue.rs  renderer.rs  surface.rs  swapchain.rs  trait.rs  virtual_device.rs
tactfs/: Cargo.toml
tactfs/src/: fs.rs  lib.rs  psv.rs  tact.rs
tactfs/src/tact/: encoding.rs
wowedit/: Cargo.toml  build.rs
wowedit/assets/: grid.frag
wowedit/src/: application.rs  casc.rs  events.rs  exit_signal.rs  gui.rs  interface.rs  main.rs  rendering.rs  theming.rs
wowedit/src/application/: window_state.rs
wowedit/src/casc/: encoding.rs
wowedit/src/gui/: allocator.rs  creation_context.rs  gpu_allocator.rs  image_registry.rs
wowedit/src/rendering/: geometry.rs  terrain.rs  world.rs
wowedit/src/theming/: aesthetix.rs  themes.rs
wowfs/: Cargo.toml
wowfs/src/: file_formats.rs  fs.rs  lib.rs  tact.rs
wowfs/src/file_formats/: adt.rs  config.rs  psv.rs
wowfs/src/file_formats/adt/: mapchunk.rs
wowfs/src/tact/: encoding.rs  index.rs  root.rs  traits.rs  types.rs
wowfs/tests/: build.info.sample
