[workspace]
resolver = "2"

members = [
    "renderer",
    "tactfs",
    "wowedit"
]

[workspace.dependencies]
egui = { version = "0.27.2", features = ["callstack", "default", "extra_debug_asserts", "log"] }
egui_extras = { version = "0.27.2", default-features = false, features = [] }
egui-winit = "0.27.2"
anyhow = "1.0.82"
ash = { version = "0.38.0", default-features = false, features = ["loaded", "debug"] }
derive-getters = "0.4.0"
bitmask-enum = "2.2.3"
shaderc = "0.8.3"
nohash-hasher = "0.2.0"
puffin = { version = "0.19", default-features = false }
