[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { workspace = true }
egui-winit = { workspace = true }
anyhow = { workspace = true }
# gpu-allocator = { version = "0.27.0", default-features = false, features = ["vulkan"] }
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator", branch = "ash-0.38", default-features = false, features = ["vulkan"] }
ash = { workspace = true }
ash-window = "0.13.0"
raw-window-handle = "0.6.1"
derive-getters = { workspace = true }
bitmask-enum = { workspace = true }
shaderc = "0.8.3"
nohash-hasher = { workspace = true }
