[package]
name = "tactfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
anyhow = "1.0.82"
thiserror = "1.0.59"
md5 = "0.7.0"
enumflags2 = "0.7.9"
byteorder = "1.5.0"
bitmask-enum = { workspace = true }
