[package]
name = "wowedit"
version = "0.1.0"
edition = "2021"

# TODO: Clarify the whole dependency hell I have going on here.
[dependencies]
puffin_egui = "0.27.0"
puffin = "0.19"
bytes = "1.6.0"
anyhow = "1.0.82"
thiserror = "1.0.59"
md5 = "0.7.0"
enumflags2 = "0.7.9"
renderer = { path = "../renderer" }